# wasm-game-of-life

./: .gitignore  Cargo.toml  README.md  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
css/: styles.css
src/: app.rs  lib.rs
static/: index.html
