[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.4", optional = true }
wasm-bindgen = "0.2.63"
yew = "0.17"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "z"
